schema/testdata/errors/permission_attribute_invalid_roles.keel
model Person {
    actions {
        get getPerson(id)
    }

    @permission(
        //expect-error:17:29:AttributeExpressionError:NotValidRole is not a role defined in your schema
        roles: [NotValidRole],
        actions: [get]
    )

    @permission(
        //expect-error:16:20:AttributeExpressionError:expression expected to resolve to type Role[] but it is Number
        roles: 1234,
        actions: [get]
    )

    @permission(
        //expect-error:16:22:AttributeExpressionError:expression expected to resolve to type Role[] but it is Text
        roles: "1234",
        actions: [get]
    )

    @permission(
        //expect-error:16:34:AttributeExpressionError:expression expected to resolve to type Role[] but it is Text[]
        roles: ["thisisnotvalid"],
        actions: [get]
    )
}

task MyTask {
    @permission(
        //expect-error:17:29:AttributeExpressionError:NotValidRole is not a role defined in your schema
        roles: [NotValidRole]
    )

    @permission(
        //expect-error:16:20:AttributeExpressionError:expression expected to resolve to type Role[] but it is Number
        roles: 1234
    )

    @permission(
        //expect-error:16:22:AttributeExpressionError:expression expected to resolve to type Role[] but it is Text
        roles: "1234"
    )

    @permission(
        //expect-error:16:34:AttributeExpressionError:expression expected to resolve to type Role[] but it is Text[]
        roles: ["thisisnotvalid"]
    )
}


role Admin {
    domains {
        "myorg.com"
    }
}
